[FEATURE] Allow user to customize the short code
