# infrastructure/http/handlers.go
@@ -36,31 +36,33 @@ func (h *Handler) HandleHomePage(c *gin.Context) {
 	//var linksListHtml string
 	var urlMappings []urlModel.URLMapping
 	for _, url := range urls {
-		//linksListHtml += fmt.Sprintf("<div>Shortened: <a href=\"/short/%s\">/short/%s</a> Original: %s</div>", url.ShortCode, url.ShortCode, url.OriginalURL)
 		urlMappings = append(urlMappings, urlModel.URLMapping{ShortCode: url.ShortCode, OriginalURL: url.OriginalURL, Expiry: url.Expiry})
 	}
-	//c.Header("Content-Type", "text/html")
-	//c.String(http.StatusOK, "<h2>Go URL Shortener</h2><p>Welcome! Here's a list of all shortened URLs:</p>%s", linksListHtml)
+
 	c.IndentedJSON(http.StatusOK, urlMappings)
 }
 
 // HandleAddLink creates a shortened link for the given original URL.
 // @Summary Creates a shortened link for the given original URL.
 // @Description NOTE 1: In the JSON body, the "original_url" should contain proper formatting with either http or https. Example: https://www.google.com.
-// @Description NOTE 2: In the JSON body, the "expiry" date is optional, with the default expiration set to 30 days from now. The expiry time can be customized like this example: 2024-04-02T00:00:00Z
+// @Description NOTE 2: In the JSON body, the "expiry" date is optional, with the default expiration set to 30 days from now. The expiry time can be customized like this example: 2024-04-02T00:00:00Z.
+// @Description NOTE 3: In the JSON body, the "custom_short_code" is also optional. A unique custom short code can be set for the shortened URL.
 // @Tags URL
 // @Accept json
-// @Param original_url body urlModel.AddURLRequest true "Original URL and Expiry Time (optional)"
+// @Param original_url body urlModel.AddURLRequest true "Original URL, Expiry Time (optional), Custom Short Code (optional)"
 // @Produce json
 // @Success 200 {object} urlModel.AddSuccessResponse "Shortened URL"
 // @Router /url/add [post]
 func (h *Handler) HandleAddLink(c *gin.Context) {
 
-	var newUrl = urlModel.URL{}
+	// Validate the input
+	var newUrl = urlModel.AddURLRequest{}
 	if err := c.BindJSON(&newUrl); err != nil || newUrl.OriginalURL == "" {
 		c.IndentedJSON(http.StatusBadRequest, gin.H{"message": "Bad request - original_url is required"})
 		return
 	}
+
+	// Check if the original URL is valid
 	originalURL := newUrl.OriginalURL
 	if !isValidUrl(originalURL) {
 		c.IndentedJSON(http.StatusBadRequest, gin.H{"message": "Invalid request - Missing http or https - example: https://www.google.com"})
@@ -68,15 +70,13 @@ func (h *Handler) HandleAddLink(c *gin.Context) {
 	}
 
 	// Get the expiry time
+	// Check if the expiry time is not set
+	// If not, set the expiry time to the defaultExpiryDays
 	customExpiryTime := newUrl.Expiry
-
 	now := time.Now()
 	var defaultExpiryDays time.Duration = 30
 	defaultExpiryTime := now.Add(defaultExpiryDays * 24 * time.Hour)
 	var adjustedExpiryTime time.Time
-
-	// Check if the expiry time is not set
-	// If not, set the expiry time to the defaultExpiryDays
 	if customExpiryTime == (time.Time{}) {
 		adjustedExpiryTime = defaultExpiryTime
 	} else {
@@ -88,14 +88,47 @@ func (h *Handler) HandleAddLink(c *gin.Context) {
 		}
 	}
 
-	shortCode, err := h.service.ShortenURL(c, originalURL, adjustedExpiryTime)
-	if err != nil {
-		c.String(http.StatusInternalServerError, "Error shortening URL: %v", err)
-		return
+	var updatedModel urlModel.URL
+
+	customShortCode := newUrl.CustomShortCode
+	fmt.Println("Custom Short Code: ", customShortCode)
+
+	if customShortCode != "" {
+		// Check if the custom short code is unique
+		if !h.service.IsUniqueShortCode(c, customShortCode) {
+			c.IndentedJSON(http.StatusBadRequest, gin.H{"message": "Custom short code already exists"})
+			return
+		} else {
+			fmt.Println("Custom Short Code: ", customShortCode, " is unique")
+
+			// Store the URL with the custom short code
+			updatedModel = urlModel.URL{
+				ShortCode:   customShortCode,
+				OriginalURL: originalURL,
+				Expiry:      adjustedExpiryTime,
+			}
+			h.service.StoreURL(c, updatedModel)
+		}
+
+	} else {
+		generatedShortCode, err := h.service.ShortenURL(c, originalURL, adjustedExpiryTime)
+		if err != nil {
+			c.String(http.StatusInternalServerError, "Error shortening URL: %v", err)
+			return
+		}
+
+		// Store the URL with the generated short code
+		updatedModel = urlModel.URL{
+			ShortCode:   generatedShortCode,
+			OriginalURL: originalURL,
+			Expiry:      adjustedExpiryTime,
+		}
+		h.service.StoreURL(c, updatedModel)
+
 	}
 
-	shortenedURL := fmt.Sprintf("http://localhost:9000/api/v1/redirect/%s", shortCode)
-	c.IndentedJSON(http.StatusOK, gin.H{"shortened_url": shortenedURL})
+	shortenedURL := fmt.Sprintf("http://localhost:9000/api/v1/redirect/%s", updatedModel.ShortCode)
+	c.IndentedJSON(http.StatusOK, gin.H{"shortened_url": shortenedURL, "expiry": adjustedExpiryTime, "original_url": originalURL})
 }
 
 // HandleRedirectToOriginalLink redirects the user to the original URL based on the short code.
